--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
     <header>
         <nav class="navbar navbar-default navbar-fixed-top header">
-            <div class="container">
+            <div class="container header-content">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                         data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -37,7 +37,10 @@
                     </ul>
                 </div>
             </div>
+
         </nav>
+
+
     </header>
 
 
@@ -64,7 +67,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputMsg">Message</label>
-                                <textarea rows="3" class="form-control" id="exampleInputMsg"></textarea>
+                                <textarea rows="5" class="form-control" id="exampleInputMsg"></textarea>
                             </div>
 
                             <button type="submit" class="btn submit">Submit</button>
