Contact page is added

--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-default navbar-fixed-top header">
-            <div class="container header-content">
+      <nav class="navbar navbar-default navbar-fixed-top header">
+                <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                         data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -38,7 +38,7 @@
                 </div>
             </div>
 
-        </nav>
+        </nav> 
 
 
     </header>
