--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
     <header>
       <nav class="navbar navbar-default navbar-fixed-top header">
-                <div class="container-fluid">
+                <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                         data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
