--- a/portfolio.html
+++ b/portfolio.html
@@ -8,14 +8,19 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/portfolio.css">
 </head>
 
 <body>
-    <header class="myNavbar">
-        <nav class="navbar">
-            <div class="container header">
+    <header>
+        <nav class="navbar navbar-default">
+            <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                         data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -24,83 +29,80 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand profile" href="#">Nubar Xalidova</a>
+                    <a class="navbar-brand username" href="#">Nubar Xalidova</a>
                 </div>
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="./index.html">About</a></li>
-                        <li><a href="./portfolio.html">Portfolio</a></li>
-                        <li><a href="./contact.html">Contact</a></li>
+
+                    <ul class="nav navbar-nav navbar-right menu">
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
 
-
-    <div class="body">
-        <div class="container content">
+    <div class="content">
+        <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-md-12 col-sm-12 portfolio">
-                    <div class="col-lg-12 portfolio-header">
-                        <h1 class="portfolio-title">
-                            Contact
-                        </h1>
-                        <hr class="portfolio-border">
+                <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12 portfolio">
+                    <div class="portfolio-header">
+                        <h1 class="portfolio-header-title">Portfolio</h1>
+                        <hr class="portfolio-header-border">
                     </div>
-                    <div class="col-lg-12 imgs-container">
-                        <div class="col-lg-6 col-md-6 col-sm-12 img-box">
-                            <img src="./assets/images/github.png" alt="Profile">
+                    <div class="container portfolio-imgs-container">
+                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 img-box">
+                            <img src="./assets/images/github.png" alt="">
                             <div class="img-box-text">
-                                <p>Lorem ipsum</p>
+                                <h4>Lorem ipsum</h4>
                             </div>
                         </div>
-
-
-                        <div class="col-lg-6 col-md-6 col-sm-12 img-box">
-                            <img src="./assets/images/github.png" alt="Profile">
+                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 img-box">
+                            <img src="./assets/images/github.png" alt="">
                             <div class="img-box-text">
-                                <p>Lorem ipsum</p>
+                                <h4>Lorem ipsum</h4>
                             </div>
                         </div>
-
-                        <div class="col-lg-6 col-md-6 col-sm-12 img-box">
-                            <img src="./assets/images/github.png" alt="Profile">
+                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 img-box">
+                            <img src="./assets/images/github.png" alt="">
                             <div class="img-box-text">
-                                <p>Lorem ipsum</p>
+                                <h4>Lorem ipsum</h4>
                             </div>
                         </div>
-
-                        <div class="col-lg-6 col-md-6 col-sm-12 img-box">
-                            <img src="./assets/images/github.png" alt="Profile">
+                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 img-box">
+                            <img src="./assets/images/github.png" alt="">
                             <div class="img-box-text">
-                                <p>Lorem ipsum</p>
+                                <h4>Lorem ipsum</h4>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 img-box">
+                            <img src="./assets/images/github.png" alt="">
+                            <div class="img-box-text">
+                                <h4>Lorem ipsum</h4>
                             </div>
                         </div>
                     </div>
-
                 </div>
-
-                <div class="col-lg-4 col-md-12 col-sm-12 connect-me">
-                    <div class="col-12-lg connect-me-header">
-                        <h1 class="connect-me-title">Connect with me</h1>
-                        <hr class="connect-me-border">
-                    </div>
-                    <div class="connect-me-footer text-center">
-                        <img src="./assets/images/github.png" alt="GitHub">
-                        <img src="./assets/images/stackoverflow.png" alt="StackOverflow">
-                        <img src="./assets/images/linkedin.png" alt="LinkedIn">
+                <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 connect-me">
+                    <div class="connect-me-header">
+                        <h1 class="connect-me-header-title">Connect with me</h1>
+                        <hr class="connect-me-header-border">
+                        <div class="connect-me-imgs-container text-center">
+                            <img src="./assets/images/github.png" alt="">
+                            <img src="./assets/images/linkedin.png" alt="">
+                            <img src="./assets/images/stackoverflow.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <footer>
-        <nav class="navbar navbar-default navbar-fixed-bottom footer">
-            <div class="container">
+    <footer class="footer">
+        <nav class="navbar navbar-default navbar-fixed-bottom">
+            <div class="container text-center">
                 Copyright &copy; 2019 Nubar Xalidova
             </div>
         </nav>
