--- a/index.html
+++ b/index.html
@@ -5,20 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact</title>
-    <link rel="shortcut icon" href="./assets/images/profile.png" />
+    <title>Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="./assets/css/aboutme.css">
 </head>
 
 <body>
-
     <header>
-      <nav class="navbar navbar-default navbar-fixed-top header">
-                <div class="container">
+        <nav class="navbar navbar-default">
+            <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                         data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -27,81 +30,67 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="btn-name" href="index.html">Nubar Xalidova</a>
+                    <a class="navbar-brand username" href="#">Nubar Xalidova</a>
                 </div>
+
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
                     <ul class="nav navbar-nav navbar-right menu">
-                        <li><a href="index.html">About</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="./index.html">About</a></li>
+                        <li><a href="./portfolio.html">Portfolio</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
-
-        </nav> 
-
-
+        </nav>
     </header>
 
-
-    <div class="body">
-        <div class="container main-container">
+    <div class="content">
+        <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-md-12 col-sm-12 contact">
-
-                    <div class="col-lg-12 col-md-12 col-sm-12 contact-header">
-                        <h1 id="contact-title">About me</h1>
-                        <hr id="contact-border">
+                <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12 about-me">
+                    <div class="about-me-header">
+                        <h1 class="header-title">About me</h1>
+                        <hr class="header-border">
                     </div>
-
-                    <div class="col-lg-12">
-                        <form>
-                            <div class="form-group">
-                                <label for="exampleInputName">Name</label>
-                                <input type="text" class="form-control" id="exampleInputName" placeholder="John Smith">
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputEmail">Password</label>
-                                <input type="text" class="form-control" id="exampleInputEmail"
-                                    placeholder="example@gmail.com">
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputMsg">Message</label>
-                                <textarea rows="5" class="form-control" id="exampleInputMsg"></textarea>
-                            </div>
-
-                            <button type="submit" class="btn submit">Submit</button>
-                        </form>
-                    </div>
-
-
-                </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 connect-me">
-
-                    <div class="col-lg-12 col-md-12 col-sm-12 connect-header">
-                        <h1 id="connect-title">Connect with me</h1>
-                        <hr>
-                    </div>
-                    <div class="text-center">
-                        <img src="./assets/images/github.png" alt="GitHub">
-                        <img src="./assets/images/linkedin.png" alt="LinkedIn">
-                        <img src="./assets/images/stackoverflow.png" alt="stackoverflow">
+                    <div class="about-me-container">
+                      <img src="./assets/images/github.png" alt="Profile">
+                      <p>
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit amet labore harum 
+                          quisquam repellat, culpa dolorum omnis laboriosam ea dolores est molestias minus
+                          rerum pariatur! Quod repellat debitis ut esse.Lorem ipsum dolor sit amet consectetur 
+                          adipisicing elit. Sit amet labore harum uisquam repellat, culpa dolorum omnis 
+                          laboriosam ea dolores est molestias minus rerum pariatur! Quod repellat debitis ut esse.
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit amet labore harum 
+                          quisquam repellat, culpa dolorum omnis laboriosam ea dolores est molestias minus
+                          rerum pariatur! Quod repellat debitis ut esse.Lorem ipsum dolor sit amet consectetur 
+                          adipisicing elit. Sit amet labore harum uisquam repellat, culpa dolorum omnis 
+                          laboriosam ea dolores est molestias minus rerum pariatur! Quod repellat debitis ut esse.
+                      </p>
                     </div>
                 </div>
-
+                <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 connect-me">
+                    <div class="connect-me-header">
+                        <h1 class="connect-me-header-title">Connect with me</h1>
+                        <hr class="connect-me-header-border">
+                        <div class="connect-me-imgs-container text-center">
+                            <img src="./assets/images/github.png" alt="">
+                            <img src="./assets/images/linkedin.png" alt="">
+                            <img src="./assets/images/stackoverflow.png" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-    <footer>
-
-        <nav class="navbar navbar-default navbar-fixed-bottom footer">
+    <footer class="footer">
+        <nav class="navbar navbar-default navbar-fixed-bottom">
             <div class="container text-center">
                 Copyright &copy; 2019 Nubar Xalidova
             </div>
         </nav>
     </footer>
-
 </body>
 
 </html>
