--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,7 @@
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/portfolio.css">
 </head>
 
@@ -35,9 +36,9 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                     <ul class="nav navbar-nav navbar-right menu">
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="./index.html">About</a></li>
+                        <li><a href="./portfolio.html">Portfolio</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -49,8 +50,8 @@
             <div class="row">
                 <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12 portfolio">
                     <div class="portfolio-header">
-                        <h1 class="portfolio-header-title">Portfolio</h1>
-                        <hr class="portfolio-header-border">
+                        <h1 class="header-title">Portfolio</h1>
+                        <hr class="header-border">
                     </div>
                     <div class="container portfolio-imgs-container">
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 img-box">
